--- a/adminAdamShop/pages/logout.html
+++ b/adminAdamShop/pages/logout.html
@@ -9,12 +9,12 @@
     <title>ADAM SHOP</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/plugin.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../admincss/plugin.min.css">
+    <link rel="stylesheet" href="../admincss/style.css">
 
-    <link rel="icon" type="image/png" sizes="16x16" href="../../adam_shop/images/logo-removebg-preview.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/logo-removebg-preview.png">
 
-    <link rel="stylesheet" href="../css/line.css">
+    <link rel="stylesheet" href="../admincss/line.css">
 </head>
 
 <body>
@@ -26,14 +26,14 @@
                         <div class="edit-profile">
                             <div class="edit-profile__logos">
                                 <a href="index.html">
-                                    <img class="dark" src="../../adam_shop/images/logo-removebg-preview.png" alt="">
-                                    <img class="light" src="../../adam_shop/images/logo-removebg-preview.png" alt="">
+                                    <img class="dark" src="../images/logo-removebg-preview.png" alt="">
+                                    <img class="light" src="../images/logo-removebg-preview.png" alt="">
                                 </a>
                             </div>
                             <div class="card border-0">
                                 <div class="card-header">
                                     <div class="edit-profile__title">
-                                        <h6>Sign in HexaDash</h6>
+                                        <h6>Sign in</h6>
                                     </div>
                                 </div>
                                 <div class="card-body">
@@ -135,8 +135,8 @@
         </ul>
     </div>
 
-    <script src="../js/plugins.min.js"></script>
-    <script src="../js/script.min.js"></script>
+    <script src="../javascript/plugins.min.js"></script>
+    <script src="../javascript/script.min.js"></script>
 
 </body>
 
