--- a/adam_shop/pages/index.html
+++ b/adam_shop/pages/index.html
@@ -87,9 +87,9 @@
                     </div>
                     <div class="our-link">
                         <ul>
-                            <li><a href="login.html">My Account</a></li>
+                            <li><a href="/?view=login.html">My Account</a></li>
                             <li><a href="#">Our location</a></li>
-                            <li><a href="contact-us.html">Contact Us</a></li>
+                            <li><a href="/?view=contact-us.html">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
@@ -108,17 +108,17 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                 </button>
-                    <a class="navbar-brand" href="index.html"><img src="../images/logo.jpg" class="logo" alt=""></a>
+                    <a class="navbar-brand" href="/?view=index.html"><img src="../images/logo.jpg" class="logo" alt=""></a>
                 </div>
                 <!-- End Header Navigation -->
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav ml-auto" data-in="fadeInDown" data-out="fadeOutUp">
-                        <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="/?view=index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/?view=about.html">About Us</a></li>
                         <li class="dropdown megamenu-fw">
-                            <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">Product</a>
+                            <a href="/?view=shop.html" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">Product</a>
                             <ul class="dropdown-menu megamenu-content" role="menu">
                                 <li>
                                     <div class="row">
@@ -126,10 +126,10 @@
                                             <h6 class="title">Top</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
-                                                    <li><a href="shop.html">Jackets</a></li>
-                                                    <li><a href="shop.html">Shirts</a></li>
-                                                    <li><a href="shop.html">Sweaters & Cardigans</a></li>
-                                                    <li><a href="shop.html">T-shirts</a></li>
+                                                    <li><a href="/?view=shop.html">Jackets</a></li>
+                                                    <li><a href="/?view=shop.html">Shirts</a></li>
+                                                    <li><a href="/?view=shop.html">Sweaters & Cardigans</a></li>
+                                                    <li><a href="/?view=shop.html">T-shirts</a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -138,10 +138,10 @@
                                             <h6 class="title">Bottom</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
-                                                    <li><a href="shop.html">Swimwear</a></li>
-                                                    <li><a href="shop.html">Skirts</a></li>
-                                                    <li><a href="shop.html">Jeans</a></li>
-                                                    <li><a href="shop.html">Trousers</a></li>
+                                                    <li><a href="/?view=shop.html">Swimwear</a></li>
+                                                    <li><a href="/?view=shop.html">Skirts</a></li>
+                                                    <li><a href="/?view=shop.html">Jeans</a></li>
+                                                    <li><a href="/?view=shop.html">Trousers</a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -150,10 +150,10 @@
                                             <h6 class="title">Clothing</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
-                                                    <li><a href="shop.html">Top Wear</a></li>
-                                                    <li><a href="shop.html">Party wear</a></li>
-                                                    <li><a href="shop.html">Bottom Wear</a></li>
-                                                    <li><a href="shop.html">Indian Wear</a></li>
+                                                    <li><a href="/?view=shop.html">Top Wear</a></li>
+                                                    <li><a href="/?view=shop.html">Party wear</a></li>
+                                                    <li><a href="/?view=shop.html">Bottom Wear</a></li>
+                                                    <li><a href="/?view=shop.html">Indian Wear</a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -161,10 +161,10 @@
                                             <h6 class="title">Accessories</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
-                                                    <li><a href="shop.html">Bags</a></li>
-                                                    <li><a href="shop.html">Sunglasses</a></li>
-                                                    <li><a href="shop.html">Fragrances</a></li>
-                                                    <li><a href="shop.html">Wallets</a></li>
+                                                    <li><a href="/?view=shop.html">Bags</a></li>
+                                                    <li><a href="/?view=shop.html">Sunglasses</a></li>
+                                                    <li><a href="/?view=shop.html">Fragrances</a></li>
+                                                    <li><a href="/?view=shop.html">Wallets</a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -177,15 +177,15 @@
                         <li class="dropdown">
                             <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">SHOP</a>
                             <ul class="dropdown-menu">
-                                <li><a href="cart.html">Cart</a></li>
-                                <li><a href="checkout.html">Checkout</a></li>
-                                <li><a href="my-account.html">My Account</a></li>
-                                <li><a href="wishlist.html">Wishlist</a></li>
-                                <li><a href="shop-detail.html">Shop Detail</a></li>
+                                <li><a href="/?view=cart.html">Cart</a></li>
+                                <li><a href="/?view=checkout.html">Checkout</a></li>
+                                <li><a href="/?view=my-account.html">My Account</a></li>
+                                <li><a href="/?view=wishlist.html">Wishlist</a></li>
+                                <li><a href="/?view=shop-detail.html">Shop Detail</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="service.html">Our Service</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/?view=service.html">Our Service</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/?view=contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -223,7 +223,7 @@
                             <p>1x - <span class="price">$40.00</span></p>
                         </li>
                         <li class="total">
-                            <a href="#" class="btn btn-default hvr-hover btn-cart">VIEW CART</a>
+                            <a href="/?view=cart.html" class="btn btn-default hvr-hover btn-cart">VIEW CART</a>
                             <span class="float-right"><strong>Total</strong>: $180.00</span>
                         </li>
                     </ul>
@@ -256,7 +256,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> ADAM SHOP</strong></h1>
-                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                            <p><a class="btn hvr-hover" href="/?view=shop.html">Shop New</a></p>
                         </div>
                     </div>
                 </div>
@@ -267,7 +267,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> ADAM SHOP</strong></h1>
-                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                            <p><a class="btn hvr-hover" href="/?view=shop.html">Shop New</a></p>
                         </div>
                     </div>
                 </div>
@@ -278,7 +278,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> ADAM</strong></h1>
-                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                            <p><a class="btn hvr-hover" href="/?view=shop.html">Shop New</a></p>
                         </div>
                     </div>
                 </div>
@@ -298,31 +298,31 @@
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="shop-cat-box">
                         <img class="img-fluid" src="../images/t-shirts-img.jpg" alt="" />
-                        <a class="btn hvr-hover" href="#">T-shirts</a>
+                        <a class="btn hvr-hover" href="/?view=shop.html">T-shirts</a>
                     </div>
                     <div class="shop-cat-box">
                         <img class="img-fluid" src="../images/shirt-img.jpg" alt="" />
-                        <a class="btn hvr-hover" href="#">Shirt</a>
+                        <a class="btn hvr-hover" href="/?view=shop.html">Shirt</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="shop-cat-box">
                         <img class="img-fluid" src="../images/wallet-img.jpg" alt="" />
-                        <a class="btn hvr-hover" href="#">Wallet</a>
+                        <a class="btn hvr-hover" href="/?view=shop.html">Wallet</a>
                     </div>
                     <div class="shop-cat-box">
                         <img class="img-fluid" src="../images/bag-img.jpg" alt="" />
-                        <a class="btn hvr-hover" href="#">Bags</a>
+                        <a class="btn hvr-hover" href="/?view=shop.html">Bags</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="shop-cat-box">
                         <img class="img-fluid" src="../images/shoes-img.jpg" alt="" />
-                        <a class="btn hvr-hover" href="#">Shoes</a>
+                        <a class="btn hvr-hover" href="/?view=shop.html">Shoes</a>
                     </div>
                     <div class="shop-cat-box">
                         <img class="img-fluid" src="../images/clock-img-01.jpg" alt="" />
-                        <a class="btn hvr-hover" href="#">Clock</a>
+                        <a class="btn hvr-hover" href="/?view=shop.html">Clock</a>
                     </div>
                 </div>
             </div>
@@ -688,7 +688,7 @@
     <script src="../js/jquery.superslides.min.js"></script>
     <script src="../js/bootstrap-select.js"></script>
     <script src="../js/inewsticker.js"></script>
-    <script src="../js/bootsnav.js."></script>
+    <script src="../js/bootsnav.js"></script>
     <script src="../js/images-loded.min.js"></script>
     <script src="../js/isotope.min.js"></script>
     <script src="../js/owl.carousel.min.js"></script>
