--- a/adam_shop/pages/login.html
+++ b/adam_shop/pages/login.html
@@ -40,27 +40,29 @@
 <body>
      <div class="login-box">
           <h2>Login</h2>
-          <form>
+          <form class="form-login" type="Submit" method="post" action="/account/login">
             <div class="user-box">
-              <input type="text" name="" required="">
+              <input type="text" name="username" required="true" >
               <label>Username</label>
             </div>
             <div class="user-box">
-              <input type="password" name="" required="">
+              <input type="password" name="password" required="true">
               <label>Password</label>
             </div>
-            <a href="#">
+            <a id="btn-submit">
               <span></span>
               <span></span>
               <span></span>
               <span></span>
-              Submit
+              <p style="color:azure">
+                Submit
+              </p>
             </a>
             <p class="text--center">
-               <span class="notify">
+               <span style="color:azure" class="notify">
                     Not a member?
                </span>
-               <a href="signup.html" class="sign-up">Sign up now</a>
+               <a href="/?view=signup.html" class="sign-up">Sign up now</a>
                <!-- <svg class="icon">
                     <use xlink:href="#icon-arrow-right"></use>
                </svg> -->
@@ -74,6 +76,51 @@
              </a> -->
           </form>
         </div>
-        <script src="../js/login.js"></script>
+        <script>
+          //lấy ô input của người dùng
+          const username = document.getElementsByName('username')[0]
+          const password = document.getElementsByName('password')[0]
+          const btn_submit = document.getElementById("btn-submit");
+
+          //tạo object chứa thông tin người dùng nhập
+          const valueInput = new Object()
+          username.onchange = () => {
+            valueInput.username = username.value
+          }
+          password.onchange = () => {
+            valueInput.password = password.value
+          }
+          btn_submit.onclick = () => {
+            if(valueInput.username && valueInput.password){
+              //tạo đối tượng XMLHttpRequest
+              const xhr = new XMLHttpRequest()
+    
+              // Thiết lập các thông số của yêu cầu
+              xhr.open("POST", "http://localhost:4000/account/login",true);
+              xhr.setRequestHeader('Content-Type', 'application/json');
+              // Đăng ký hàm xử lý sự kiện onreadystatechange
+              xhr.onreadystatechange = function() {
+                // Kiểm tra trạng thái của yêu cầu
+                if (xhr.readyState == 4) {
+                  if (xhr.status == 200) {
+                    location.replace("http://localhost:4000");
+                  } else {
+                    // Yêu cầu thất bại
+                    // Xử lý lỗi nếu có
+                    alert(xhr.responseText);
+                  }
+                }
+              };
+              //chuyển object thành json để gửi lên sever
+              const json = JSON.stringify(valueInput)
+              // Gửi yêu cầu đến server
+              xhr.send(json);
+            }else {
+              alert('Bạn phải nhập đủ thông tin đăng nhập');
+            }
+          }
+
+        </script>
+        <!-- <script src="../js/login.js"></script> -->
 </body>
 </html>
