--- a/adminAdamShop/pages/index.html
+++ b/adminAdamShop/pages/index.html
@@ -8,12 +8,12 @@
     <title>ADAM SHOP</title>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&amp;display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/plugin.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../admincss/plugin.min.css">
+    <link rel="stylesheet" href="../admincss/style.css">
 
-    <link rel="icon" type="image/png" sizes="16x16" href="../../adam_shop/images/logo-removebg-preview.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/logo-removebg-preview.png">
 
-    <link rel="stylesheet" href="../css/line.css">
+    <link rel="stylesheet" href="../admincss/line.css">
 </head>
 
 <body class="layout-light side-menu">
@@ -29,9 +29,9 @@
         <nav class="navbar navbar-light">
             <div class="navbar-left">
                 <div class="logo-area">
-                    <a class="navbar-brand" href="index.html">
-                        <img class="dark" src="../../adam_shop/images/logo-removebg-preview.png" alt="logo">
-                        <img class="light" src="../../adam_shop/images/logo-removebg-preview.png" alt="logo">
+                    <a class="navbar-brand" href="/admin/?view=index.html">
+                        <img class="dark" src="../images/logo-removebg-preview.png" alt="logo">
+                        <img class="light" src="../images/logo-removebg-preview.png" alt="logo">
                     </a>
                     <a href="#" class="sidebar-toggle">
                         <img class="svg" src="../img/svg/align-center-alt.svg" alt="img"></a>
@@ -386,7 +386,7 @@
                 <div class="sidebar__menu-group">
                     <ul class="sidebar_nav">
                         <li>
-                            <a href="index.html" class="active">
+                            <a href="/admin/?view=index.html" class="active">
                                 <span class="nav-icon uil uil-create-dashboard"></span>
                                 <span class="menu-text">Trang quản trị</span>
                             </a>
@@ -399,15 +399,15 @@
                             </a>
                             <ul>
                                 <li class="l_sidebar">
-                                    <a href="products.html">Danh sách sản phẩm</a>
+                                    <a href="/admin/?view=products.html">Danh sách sản phẩm</a>
                                 </li>
                                 <li class="l_sidebar">
-                                    <a href="add-product.html">Thêm sản phẩm mới</a>
+                                    <a href="/admin/?view=add-product.html">Thêm sản phẩm mới</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="user-list.html">
+                            <a href="/admin/?view=user-list.html">
                                 <span class="nav-icon uil uil-user-md"></span>
                                 <span class="menu-text">Quản lý nhân viên</span>
                             </a>
@@ -420,13 +420,13 @@
                             </a>
                             <ul>
                                 <li class="l_sidebar">
-                                    <a href="users-datatable.html">Danh sách khách hàng</a>
+                                    <a href="/admin/?view=users-datatable.html">Danh sách khách hàng</a>
                                 </li>
                                 <li class="l_sidebar">
-                                    <a href="message.html">Hỗ trợ khách hàng</a>
+                                    <a href="/admin/?view=message.html">Hỗ trợ khách hàng</a>
                                 </li>
                                 <li class="l_sidebar">
-                                    <a href="message.html">Trò chuyện</a>
+                                    <a href="/admin/?view=message.html">Trò chuyện</a>
                                 </li>
                             </ul>
                         </li>
@@ -442,24 +442,24 @@
                             </a>
                             <ul>
                                 <li class="l_sidebar">
-                                    <a href="chart.html">Tháng qua</a>
+                                    <a href="/admin/?view=chart.html">Tháng qua</a>
                                 </li>
                                 <li class="l_sidebar">
-                                    <a href="chart.html">3 tháng qua</a>
+                                    <a href="/admin/?view=chart.html">3 tháng qua</a>
                                 </li>
                                 <li class="l_sidebar">
-                                    <a href="chart.html">Năm qua</a>
+                                    <a href="/admin/?view=chart.html">Năm qua</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="carts.html" class="">
+                            <a href="/admin/?view=carts.html" class="">
                                 <span class="nav-icon uil uil-folder"></span>
                                 <span class="menu-text">Quản lý đơn hàng</span>
                             </a>
                         </li>
                         <li class="">
-                            <a href="logout.html">
+                            <a href="/admin/?view=logout.html">
                                 <span class="nav-icon uil uil-sign-out-alt"></span>
                                 <span class="menu-text">Log out</span>
                             </a>
@@ -477,7 +477,7 @@
                                 <div class="breadcrumb-action justify-content-center flex-wrap">
                                     <nav aria-label="breadcrumb">
                                         <ol class="breadcrumb">
-                                            <li class="breadcrumb-item"><a href="#"><i class="uil uil-estate"></i>Trang
+                                            <li class="breadcrumb-item"><a href="/admin/?view="><i class="uil uil-estate"></i>Trang
                                                     quản trị</a></li>
                                         </ol>
                                     </nav>
@@ -948,7 +948,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -971,7 +971,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -994,7 +994,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -1017,7 +1017,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -1040,7 +1040,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -1063,7 +1063,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -1106,7 +1106,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -1129,7 +1129,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -1152,7 +1152,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -1175,7 +1175,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -1198,7 +1198,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -1221,7 +1221,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -1264,7 +1264,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -1287,7 +1287,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -1310,7 +1310,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -1333,7 +1333,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -1356,7 +1356,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -1379,7 +1379,7 @@
                                                                     124 $
                                                                 </td>
                                                                 <td>
-                                                                    <a href="message.html">
+                                                                    <a href="/admin/?view=message.html">
                                                                         Liên hệ
                                                                     </a>
                                                                 </td>
@@ -1512,8 +1512,8 @@
     </div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgYKHZB_QKKLWfIRaYPCadza3nhTAbv7c"></script>
 
-    <script src="../js/plugins.min.js"></script>
-    <script src="../js/script.min.js"></script>
+    <script src="../javascript/plugins.min.js"></script>
+    <script src="../javascript/script.min.js"></script>
 
 </body>
 
