--- a/adminAdamShop/pages/message.html
+++ b/adminAdamShop/pages/message.html
@@ -8,12 +8,12 @@
   <title>ADAM SHOP</title>
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&amp;display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="../css/plugin.min.css">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../admincss/plugin.min.css">
+  <link rel="stylesheet" href="../admincss/style.css">
 
-  <link rel="icon" type="image/png" sizes="16x16" href="../../adam_shop/images/logo-removebg-preview.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../images/logo-removebg-preview.png">
 
-  <link rel="stylesheet" href="../css/line.css">
+  <link rel="stylesheet" href="../admincss/line.css">
 </head>
 
 <body class="layout-light side-menu">
@@ -28,9 +28,9 @@
     <nav class="navbar navbar-light">
       <div class="navbar-left">
         <div class="logo-area">
-          <a class="navbar-brand" href="index.html">
-            <img class="dark" src="../../adam_shop/images/logo-removebg-preview.png" alt="logo">
-            <img class="light" src="../../adam_shop/images/logo-removebg-preview.png" alt="logo">
+          <a class="navbar-brand" href="/admin/?view=index.html">
+            <img class="dark" src="../images/logo-removebg-preview.png" alt="logo">
+            <img class="light" src="../images/logo-removebg-preview.png" alt="logo">
           </a>
           <a href="#" class="sidebar-toggle">
             <img class="svg" src="../img/svg/align-center-alt.svg" alt="img"></a>
@@ -376,7 +376,7 @@
         <div class="sidebar__menu-group">
           <ul class="sidebar_nav">
             <li>
-              <a href="index.html">
+              <a href="/admin/?view=index.html">
                 <span class="nav-icon uil uil-create-dashboard"></span>
                 <span class="menu-text">Trang quản trị</span>
               </a>
@@ -389,15 +389,15 @@
               </a>
               <ul>
                 <li class="l_sidebar">
-                  <a href="products.html">Danh sách sản phẩm</a>
+                  <a href="/admin/?view=products.html">Danh sách sản phẩm</a>
                 </li>
                 <li class="l_sidebar">
-                  <a href="add-product.html">Thêm sản phẩm mới</a>
+                  <a href="/admin/?view=add-product.html">Thêm sản phẩm mới</a>
                 </li>
               </ul>
             </li>
             <li>
-              <a href="user-list.html">
+              <a href="/admin/?view=user-list.html">
                 <span class="nav-icon uil uil-user-md"></span>
                 <span class="menu-text">Quản lý nhân viên</span>
               </a>
@@ -410,10 +410,10 @@
               </a>
               <ul>
                 <li class="l_sidebar">
-                  <a href="users-datatable.html">Danh sách khách hàng</a>
+                  <a href="/admin/?view=users-datatable.html">Danh sách khách hàng</a>
                 </li>
                 <li class="l_sidebar">
-                  <a href="message.html" class="active">Hỗ trợ khách hàng</a>
+                  <a href="/admin/?view=message.html" class="active">Hỗ trợ khách hàng</a>
                 </li>
 
               </ul>
@@ -430,13 +430,13 @@
               </a>
               <ul>
                 <li class="l_sidebar">
-                  <a href="#">Tháng qua</a>
+                  <a href="/admin/?view=chart.html">Tháng qua</a>
                 </li>
                 <li class="l_sidebar">
-                  <a href="#">3 tháng qua</a>
+                  <a href="/admin/?view=chart.html">3 tháng qua</a>
                 </li>
                 <li class="l_sidebar">
-                  <a href="#">Năm qua</a>
+                  <a href="/admin/?view=chart.html">Năm qua</a>
                 </li>
               </ul>
             </li>
@@ -448,18 +448,18 @@
               </a>
               <ul>
                 <li class="">
-                  <a href="projects.html">Danh sách đơn hàng</a>
+                  <a href="/admin/?view=carts.html">Danh sách đơn hàng</a>
                 </li>
                 <li class="">
-                  <a href="projects.html">Đơn hàng mới</a>
+                  <a href="/admin/?view=carts.html">Đơn hàng mới</a>
                 </li>
                 <li class="">
-                  <a href="application-ui.html">Đang hàng boom</a>
+                  <a href="/admin/?view=carts.html">Đang hàng boom</a>
                 </li>
               </ul>
             </li>
             <li class="">
-              <a href="sign-out.html">
+              <a href="/admin/?view=sign-out.html">
                 <span class="nav-icon uil uil-sign-out-alt"></span>
                 <span class="menu-text">Log out</span>
               </a>
@@ -477,7 +477,7 @@
               <div class="breadcrumb-action justify-content-center flex-wrap">
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#"><i class="uil uil-estate"></i>Home</a></li>
+                    <li class="breadcrumb-item"><a href="/admin/?view=index.html"><i class="uil uil-estate"></i>Home</a></li>
                     <li class="breadcrumb-item active" aria-current="page">chat</li>
                   </ol>
                 </nav>
@@ -2854,8 +2854,8 @@
   </div>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgYKHZB_QKKLWfIRaYPCadza3nhTAbv7c"></script>
 
-  <script src="../js/plugins.min.js"></script>
-  <script src="../js/script.min.js"></script>
+  <script src="../javascript/plugins.min.js"></script>
+  <script src="../javascript/script.min.js"></script>
 
 </body>
 
