--- a/adminAdamShop/pages/user-list.html
+++ b/adminAdamShop/pages/user-list.html
@@ -8,12 +8,12 @@
     <title>ADAM SHOP</title>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&amp;display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/plugin.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../admincss/plugin.min.css">
+    <link rel="stylesheet" href="../admincss/style.css">
 
-    <link rel="icon" type="image/png" sizes="16x16" href="../../adam_shop/images/logo-removebg-preview.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/logo-removebg-preview.png">
 
-    <link rel="stylesheet" href="../css/line.css">
+    <link rel="stylesheet" href="../admincss/line.css">
 </head>
 
 <body class="layout-light side-menu">
@@ -29,9 +29,9 @@
         <nav class="navbar navbar-light">
             <div class="navbar-left">
                 <div class="logo-area">
-                    <a class="navbar-brand" href="index.html">
-                        <img class="dark" src="../../adam_shop/images/logo-removebg-preview.png" alt="logo">
-                        <img class="light" src="../../adam_shop/images/logo-removebg-preview.png" alt="logo">
+                    <a class="navbar-brand" href="/admin/?view=index.html">
+                        <img class="dark" src="../images/logo-removebg-preview.png" alt="logo">
+                        <img class="light" src="../images/logo-removebg-preview.png" alt="logo">
                     </a>
                     <a href="#" class="sidebar-toggle">
                         <img class="svg" src="../img/svg/align-center-alt.svg" alt="img"></a>
@@ -207,7 +207,7 @@
                                                             Group</a>
                                                     </li>
                                                     <li>
-                                                        <a href="user-info.html" class="">Add
+                                                        <a href="/admin/?view=user-info.html" class="">Add
                                                             User</a>
                                                     </li>
                                                     <li>
@@ -1201,7 +1201,7 @@
                 <div class="sidebar__menu-group">
                     <ul class="sidebar_nav">
                         <li>
-                            <a href="index.html">
+                            <a href="/admin/?view=index.html">
                                 <span class="nav-icon uil uil-create-dashboard"></span>
                                 <span class="menu-text">Trang quản trị</span>
                             </a>
@@ -1214,15 +1214,15 @@
                             </a>
                             <ul>
                                 <li class="l_sidebar">
-                                    <a href="products.html">Danh sách sản phẩm</a>
+                                    <a href="/admin/?view=products.html">Danh sách sản phẩm</a>
                                 </li>
                                 <li class="l_sidebar">
-                                    <a href="add-product.html">Thêm sản phẩm mới</a>
+                                    <a href="/admin/?view=add-product.html">Thêm sản phẩm mới</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="user-list.html" class="active">
+                            <a href="/admin/?view=user-list.html" class="active">
                                 <span class="nav-icon uil uil-user-md"></span>
                                 <span class="menu-text">Quản lý nhân viên</span>
                             </a>
@@ -1235,13 +1235,13 @@
                             </a>
                             <ul>
                                 <li class="l_sidebar">
-                                    <a href="users-datatable.html">Danh sách khách hàng</a>
+                                    <a href="/admin/?view=users-datatable.html">Danh sách khách hàng</a>
                                 </li>
                                 <li class="l_sidebar">
-                                    <a href="message.html">Hỗ trợ khách hàng</a>
+                                    <a href="/admin/?view=message.html">Hỗ trợ khách hàng</a>
                                 </li>
                                 <li class="l_sidebar">
-                                    <a href="message.html">Trò chuyện</a>
+                                    <a href="/admin/?view=message.html">Trò chuyện</a>
                                 </li>
                             </ul>
                         </li>
@@ -1257,24 +1257,24 @@
                             </a>
                             <ul>
                                 <li class="l_sidebar">
-                                    <a href="chart.html">Tháng qua</a>
+                                    <a href="/admin/?view=chart.html">Tháng qua</a>
                                 </li>
                                 <li class="l_sidebar">
-                                    <a href="chart.html">3 tháng qua</a>
+                                    <a href="/admin/?view=chart.html">3 tháng qua</a>
                                 </li>
                                 <li class="l_sidebar">
-                                    <a href="chart.html">Năm qua</a>
+                                    <a href="/admin/?view=chart.html">Năm qua</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="carts.html" class="">
+                            <a href="/admin/?view=carts.html" class="">
                                 <span class="nav-icon uil uil-folder"></span>
                                 <span class="menu-text">Quản lý đơn hàng</span>
                             </a>
                         </li>
                         <li class="">
-                            <a href="logout.html">
+                            <a href="/admin/?view=logout.html">
                                 <span class="nav-icon uil uil-sign-out-alt"></span>
                                 <span class="menu-text">Log out</span>
                             </a>
@@ -1311,7 +1311,7 @@
                                     <div class="modal-dialog modal-dialog-centered">
                                         <div class="modal-content  radius-xl">
                                             <div class="modal-header">
-                                                <h6 class="modal-title fw-500" id="staticBackdropLabel">Create project
+                                                <h6 class="modal-title fw-500" id="staticBackdropLabel">Create new User
                                                 </h6>
                                                 <button type="button" class="close" data-bs-dismiss="modal"
                                                     aria-label="Close">
@@ -1438,7 +1438,7 @@
                                                         <div class="button-group d-flex pt-25">
                                                             <button
                                                                 class="btn btn-primary btn-default btn-squared text-capitalize">add
-                                                                new project
+                                                                new user
                                                             </button>
                                                             <button type="button"
                                                                 class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light"
@@ -1472,7 +1472,7 @@
                                     </div>
                                 </div>
                                 <div class="users-list__button mt-xl-0 mt-15">
-                                    <a href="user-info.html"
+                                    <a href="/admin/?view=user-info.html"
                                         class="btn btn-primary btn-default btn-squared text-capitalize px-20 mb-10 global-shadow">view
                                         profile
                                     </a>
@@ -1499,7 +1499,7 @@
                                     </div>
                                 </div>
                                 <div class="users-list__button mt-xl-0 mt-15">
-                                    <a href="user-info.html"
+                                    <a href="/admin/?view=user-info.html"
                                         class="btn btn-primary btn-default btn-squared text-capitalize px-20 mb-10 global-shadow">view
                                         profile
                                     </a>
@@ -1526,7 +1526,7 @@
                                     </div>
                                 </div>
                                 <div class="users-list__button mt-xl-0 mt-15">
-                                    <a href="user-info.html"
+                                    <a href="/admin/?view=user-info.html"
                                         class="btn btn-primary btn-default btn-squared text-capitalize px-20 mb-10 global-shadow">view
                                         profile
                                     </a>
@@ -1553,7 +1553,7 @@
                                     </div>
                                 </div>
                                 <div class="users-list__button mt-xl-0 mt-15">
-                                    <a href="user-info.html"
+                                    <a href="/admin/?view=user-info.html"
                                         class="btn btn-primary btn-default btn-squared text-capitalize px-20 mb-10 global-shadow">view
                                         profile
                                     </a>
@@ -1580,7 +1580,7 @@
                                     </div>
                                 </div>
                                 <div class="users-list__button mt-xl-0 mt-15">
-                                    <a href="user-info.html"
+                                    <a href="/admin/?view=user-info.html"
                                         class="btn btn-primary btn-default btn-squared text-capitalize px-20 mb-10 global-shadow">view
                                         profile
                                     </a>
@@ -1607,7 +1607,7 @@
                                     </div>
                                 </div>
                                 <div class="users-list__button mt-xl-0 mt-15">
-                                    <a href="user-info.html"
+                                    <a href="/admin/?view=user-info.html"
                                         class="btn btn-primary btn-default btn-squared text-capitalize px-20 mb-10 global-shadow">view
                                         profile
                                     </a>
@@ -1634,7 +1634,7 @@
                                     </div>
                                 </div>
                                 <div class="users-list__button mt-xl-0 mt-15">
-                                    <a href="user-info.html"
+                                    <a href="/admin/?view=user-info.html"
                                         class="btn btn-primary btn-default btn-squared text-capitalize px-20 mb-10 global-shadow">view
                                         profile
                                     </a>
@@ -1661,7 +1661,7 @@
                                     </div>
                                 </div>
                                 <div class="users-list__button mt-xl-0 mt-15">
-                                    <a href="user-info.html"
+                                    <a href="/admin/?view=user-info.html"
                                         class="btn btn-primary btn-default btn-squared text-capitalize px-20 mb-10 global-shadow">view
                                         profile
                                     </a>
@@ -1688,7 +1688,7 @@
                                     </div>
                                 </div>
                                 <div class="users-list__button mt-xl-0 mt-15">
-                                    <a href="user-info.html"
+                                    <a href="/admin/?view=user-info.html"
                                         class="btn btn-primary btn-default btn-squared text-capitalize px-20 mb-10 global-shadow">view
                                         profile
                                     </a>
@@ -1715,7 +1715,7 @@
                                     </div>
                                 </div>
                                 <div class="users-list__button mt-xl-0 mt-15">
-                                    <a href="user-info.html"
+                                    <a href="/admin/?view=user-info.html"
                                         class="btn btn-primary btn-default btn-squared text-capitalize px-20 mb-10 global-shadow">view
                                         profile
                                     </a>
@@ -1742,7 +1742,7 @@
                                     </div>
                                 </div>
                                 <div class="users-list__button mt-xl-0 mt-15">
-                                    <a href="user-info.html"
+                                    <a href="/admin/?view=user-info.html"
                                         class="btn btn-primary btn-default btn-squared text-capitalize px-20 mb-10 global-shadow">view
                                         profile
                                     </a>
@@ -1769,7 +1769,7 @@
                                     </div>
                                 </div>
                                 <div class="users-list__button mt-xl-0 mt-15">
-                                    <a href="user-info.html"
+                                    <a href="/admin/?view=user-info.html"
                                         class="btn btn-primary btn-default btn-squared text-capitalize px-20 mb-10 global-shadow">view
                                         profile
                                     </a>
@@ -1936,8 +1936,8 @@
     </div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgYKHZB_QKKLWfIRaYPCadza3nhTAbv7c"></script>
 
-    <script src="../js/plugins.min.js"></script>
-    <script src="../js/script.min.js"></script>
+    <script src="../javascript/plugins.min.js"></script>
+    <script src="../javascript/script.min.js"></script>
 
 </body>
 
